syntax = "proto3";
  
package caber.macaron;

// Configuration to retrieve information from Yahoo quote html page.
message YahooQuoteParserConfig {
  // Which tick to quote. E.g., msft.
  string tick = 1;

  // Page types for Yahoo quote.
  enum PageType { 
    UNKNOWN_PAGE = 0;
    SUMMARY_PAGE = 1;
    HISTORY_PAGE = 2;
    STATISTICS_PAGE = 3;
    PROFILE_PAGE = 4;
    ANALYSIS_PAGE = 5;
  }

  // The page to obtain information from.
  repeated PageType page_types = 2;

  // If set, read data from this local file path instead of online.
  string local_file_path = 3;
}
